# hier

./: .gitignore  Makefile  README.md  pyproject.toml  roadmap.txt
.github/workflows/: python-package.yaml
etc/notebooks/: sandbox.ipynb
etc/serverconfig/: jupyterlabapputilsextensionannouncements.json
samples/: kens_books.json  kens_books.toml  kens_books.xml  kens_books.yaml  list.json
src/hier/: __init__.py  __main__.py  sandbox.py
