[project]
name = "hier"
version = "1.4.0"
description = "Display data in hierarchical format"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hier = "hier.__main__:main"


[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "jupyterlab>=4.3.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.6",
    "ty>=0.0.7",
]

[tool.pytest.ini_options]
addopts = "--cov"
testpaths = ["test", "tests"]
